--- a/app/src/main/res/layout/content_report_base.xml
+++ b/app/src/main/res/layout/content_report_base.xml
@@ -49,7 +49,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="8dp"
-        android:background="@drawable/ab_shadow"
+        android:background="@drawable/shadow"
         app:layout_constraintTop_toBottomOf="@id/toolbar_report"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
