--- a/app/src/main/res/layout/content_report_base.xml
+++ b/app/src/main/res/layout/content_report_base.xml
@@ -24,15 +24,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_report"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        style="@style/Toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Content -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_report"
         android:name="androidx.navigation.fragment.NavHostFragment"
