--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -18,22 +18,13 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <color name="colorPrimary">#FFA726</color>
-    <color name="colorPrimaryDark">#CE871E</color>
-    <color name="colorAccent">#42A5F5</color>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <color name="textPrimary">#262B31</color>
-    <color name="textSecondary">#70808D</color>
-    <color name="textTertiary">#B7B9C0</color>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        app:showAsAction="always"
+        android:title="@string/title_settings" />
 
-    <color name="dividerGrayForLightTheme">#1f000000</color>
-    <color name="dividerGrayForDarkTheme">#1fffffff</color>
-
-    <color name="batteryGreen">#4caf50</color>
-
-    <color name="statusBarLight">@android:color/white</color>
-    <color name="backgroundLight">@android:color/white</color>
-    <color name="backgroundLightGray">#EEEEEE</color>
-
-</resources>
+</menu>
