Add toolbar options for all entries.

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -76,7 +76,7 @@
                         android:layout_marginBottom="8dp">
 
                         <!-- Left foot -->
-                        <org.wbpbp.preshoes.feature.home.FootPressureView
+                        <org.wbpbp.preshoes.common.widget.FootPressureView
                             android:id="@+id/pressure_view_left"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
                             app:side="left" />
 
                         <!-- Right foot -->
-                        <org.wbpbp.preshoes.feature.home.FootPressureView
+                        <org.wbpbp.preshoes.common.widget.FootPressureView
                             android:id="@+id/pressure_view_right"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
