--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -17,13 +17,12 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <dimen name="textBig">22sp</dimen>
-    <dimen name="textPrimary">16sp</dimen>
-    <dimen name="textSecondary">14sp</dimen>
-    <dimen name="textTertiary">12sp</dimen>
-    <dimen name="textToolbar">22sp</dimen>
-
-</resources>
+    <FrameLayout
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
