--- a/app/src/main/res/menu/menu_diagnose.xml
+++ b/app/src/main/res/menu/menu_diagnose.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
   ~
@@ -17,13 +18,13 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <dimen name="textBig">22sp</dimen>
-    <dimen name="textPrimary">16sp</dimen>
-    <dimen name="textSecondary">14sp</dimen>
-    <dimen name="textTertiary">12sp</dimen>
-    <dimen name="textToolbar">22sp</dimen>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        app:showAsAction="always"
+        android:title="@string/title_settings" />
 
-</resources>
+</menu>
