--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,9 +73,8 @@
     <!-- Toolbar -->
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/white</item>
-        <item name="android:gravity">center_vertical</item>
         <item name="titleTextAppearance">@style/ToolbarText</item>
     </style>
     <style name="ToolbarText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
