--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,7 @@
     <dimen name="textTertiary">12sp</dimen>
     <dimen name="textToolbar">22sp</dimen>
 
+    <dimen name="footWidth">150dp</dimen>
+    <dimen name="footHeight">300dp</dimen>
+
 </resources>
