--- a/app/src/main/res/layout/foot_pressure_view_left.xml
+++ b/app/src/main/res/layout/foot_pressure_view_left.xml
@@ -26,8 +26,8 @@
 
     <!-- Background -->
     <ImageView
+        android:scaleType="fitCenter"
         android:id="@+id/background_foot"
-        android:tint="?attr/colorPrimary"
         android:layout_width="150dp"
         android:layout_height="300dp"
         android:contentDescription="@string/description_foot"
@@ -36,185 +36,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Sensor 0 -->
-    <ImageView
-        android:id="@+id/sensor_0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.7"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.22000003" />
-
-    <!-- Sensor 1 -->
-    <ImageView
-        android:id="@+id/sensor_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.22000003" />
-
-    <!-- Sensor 2 -->
-    <ImageView
-        android:id="@+id/sensor_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.25" />
-
-    <!-- Sensor 3 -->
-    <ImageView
-        android:id="@+id/sensor_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.22"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.31" />
-
-    <!-- Sensor 4 -->
-    <ImageView
-        android:id="@+id/sensor_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.47000003" />
-
-    <!-- Sensor 5 -->
-    <ImageView
-        android:id="@+id/sensor_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.53" />
-
-    <!-- Sensor 6 -->
-    <ImageView
-        android:id="@+id/sensor_6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.32"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.62" />
-
-    <!-- Sensor 7 -->
-    <ImageView
-        android:id="@+id/sensor_7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.55"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.78" />
-
-    <!-- Sensor 8 -->
-    <ImageView
-        android:id="@+id/sensor_8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.72"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.87" />
-
-    <!-- Sensor 9 -->
-    <ImageView
-        android:id="@+id/sensor_9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.56"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.95" />
-
-    <!-- Sensor 10 -->
-    <ImageView
-        android:id="@+id/sensor_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.87" />
-
-    <!-- Sensor 11 -->
-    <ImageView
-        android:id="@+id/sensor_11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/description_foot"
-        android:src="@drawable/circle"
-        android:tint="?attr/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="@id/background_foot"
-        app:layout_constraintEnd_toEndOf="@id/background_foot"
-        app:layout_constraintHorizontal_bias="0.56"
-        app:layout_constraintStart_toStartOf="@id/background_foot"
-        app:layout_constraintTop_toTopOf="@id/background_foot"
-        app:layout_constraintVertical_bias="0.87" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
