--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:textSize">18sp</item>
-        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="colorAccent">?android:attr/colorPrimary</item>
     </style>
 
     <!-- Text -->
@@ -80,7 +81,7 @@
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="android:background">?attr/toolbarBackground</item>
         <item name="titleTextAppearance">@style/ToolbarText</item>
     </style>
     <style name="ToolbarText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -123,7 +124,7 @@
 
         <item name="contentPadding">22dp</item>
         <item name="cardUseCompatPadding">false</item>
-        <item name="cardBackgroundColor">@android:color/white</item>
+        <item name="cardBackgroundColor">?android:attr/windowBackground</item>
         <item name="cardMaxElevation">12dp</item>
         <item name="cardElevation">12dp</item>
         <item name="android:clickable">true</item>
