Use attributes instead of style.

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/backgroundLittleDark"/>
+        android:background="?attr/barBackground"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
