--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,7 +25,6 @@
         <attr name="side" format="reference|string" />
     </declare-styleable>
 
-    <attr name="toolbarBackground" format="reference" />
-    <attr name="navBarBackground" format="reference" />
+    <attr name="barBackground" format="reference" />
 
 </resources>
