--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">?attr/toolbarBackground</item>
+        <item name="android:background">?attr/barBackground</item>
         <item name="titleTextAppearance">@style/ToolbarText</item>
     </style>
     <style name="ToolbarText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -124,7 +124,7 @@
 
         <item name="contentPadding">22dp</item>
         <item name="cardUseCompatPadding">false</item>
-        <item name="cardBackgroundColor">?android:attr/windowBackground</item>
+        <item name="cardBackgroundColor">?attr/barBackground</item>
         <item name="cardMaxElevation">12dp</item>
         <item name="cardElevation">12dp</item>
         <item name="android:clickable">true</item>
