--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,6 +26,7 @@
     <style name="AppBaseThemeDark" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/backgroundLittleDark</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar">false</item>
         <item name="android:navigationBarColor">@color/backgroundLittleDark</item>
 
         <item name="android:textColorPrimary">@color/textPrimaryInverse</item>
