--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,20 +21,21 @@
 <resources>
 
     <!-- TODO: use AppBaseThemeLight later -->
-    <style name="AppTheme" parent="AppBaseThemeDark" />
+    <style name="AppTheme" parent="AppBaseThemeLight" />
 
     <!-- Light theme -->
     <style name="AppBaseThemeLight" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="android:statusBarColor">@color/statusBarLight</item>
+        <item name="android:statusBarColor">@color/backgroundLight</item>
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:navigationBarColor">@android:color/white</item>
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:navigationBarColor">@color/backgroundLight</item>
 
         <item name="android:textColorPrimary">@color/textPrimary</item>
         <item name="android:textColorSecondary">@color/textSecondary</item>
         <item name="android:textColorTertiary">@color/textTertiary</item>
 
-        <item name="android:windowBackground">@android:color/white</item>
-        <item name="barBackground">@color/backgroundLittleDark</item>
+        <item name="android:windowBackground">@color/backgroundLight</item>
+        <item name="barBackground">@color/backgroundLight</item>
 
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
